# ocaml-leveldb

./: esy.json  leveldb.opam
_esy/default/: build  install  installation.json  pnp.js
_esy/default/cache/: project-17f1068211748fe834e065745aa988ae  project-c9c7c84c1375c2cfd6cd777eb494085e
_esy/default/store/b/: opam__s__leveldb-4a9c349e.info
_esy/default/store/b/opam__s__leveldb-4a9c349e/src/: dune
_esy/default/store/i/opam__s__leveldb-4a9c349e/_esy/: storePrefix
_esy/default/store/i/opam__s__leveldb-4a9c349e/doc/leveldb/: LICENSE.LGPL+static  LICENSE.MIT  README.md
_esy/default/store/i/opam__s__leveldb-4a9c349e/lib/leveldb/: META  dune-package  levelDB.cmi  levelDB.cmt  levelDB.cmti  levelDB.cmx  levelDB.ml  levelDB.mli  leveldb.cma  leveldb.cmxa  leveldb.cmxs  opam
esy.lock/: index.json
src/: dune
src/config/: discover.ml
