(library
 (public_name leveldb)
 (wrapped false)
 (foreign_stubs
  (language cxx)
  (flags (:standard -std=gnu++11 (:include flags.sexp))
  (names leveldb_stubs))
 (flags
  :standard
  -ccopt -lleveldb
  (:include flags.sexp))
 (libraries threads))

(rule
 (targets flags.sexp)
 (action
  (run ./config/discover.exe)))
